import { LOSER_DECISION_SECONDS } from "./meq-domain";
import { deduplicateActiveQueueEntries, reorderQueuePositions } from "./queue-rules";
import type { QueueDataState } from "./queue-types";
import type { CheckInDataState } from "./check-in-types";
import type { GameLifecycle, GameLifecycleError, GameMutationResult, PlayerGameHistory, PostGameDecision, ScoreSubmission, ScoreValidationError } from "./game-lifecycle-types";

function captainTeam(game:GameLifecycle,userId:string){if(game.teamA.captainUserId===userId)return game.teamA;if(game.teamB.captainUserId===userId)return game.teamB;return null}
export function isGameActive(game:GameLifecycle):boolean{return game.status==="PLAYING"||game.status==="END_REQUESTED"||game.status==="AWAITING_SCORE"}
export function getActiveGameForCourt(games:GameLifecycle[],courtId:GameLifecycle["courtId"]):GameLifecycle|undefined{return games.filter((game)=>game.courtId===courtId&&isGameActive(game)).sort((a,b)=>Date.parse(b.startedAt)-Date.parse(a.startedAt))[0]}
export function closeGameCheckInSession(state:CheckInDataState,game:GameLifecycle):CheckInDataState{const teamIds=new Set([game.teamA.teamId,game.teamB.teamId]);return{...state,games:state.games.filter((item)=>item.id!==game.id),sessions:state.sessions.filter((session)=>!(session.courtId===game.courtId&&teamIds.has(session.teamId)&&session.status==="PLAYING"))}}
export function requestEndGame(game:GameLifecycle,userId:string,nowIso:string):GameMutationResult{const team=captainTeam(game,userId);if(!team)return{ok:false,error:"NOT_CAPTAIN"};if(game.status!=="PLAYING")return{ok:false,error:game.status==="END_REQUESTED"?"DUPLICATE_END_REQUEST":"INVALID_GAME_STATUS"};return{ok:true,game:{...game,status:"END_REQUESTED",requestedByTeamId:team.teamId,requestedByUserId:userId,endRequestedAt:nowIso}}}
export function cancelEndGameRequest(game:GameLifecycle,userId:string):GameMutationResult{if(game.status!=="END_REQUESTED")return{ok:false,error:"INVALID_GAME_STATUS"};if(game.requestedByUserId!==userId)return{ok:false,error:"NOT_REQUEST_OWNER"};const{requestedByTeamId:_,requestedByUserId:__,endRequestedAt:___,...rest}=game;void _;void __;void ___;return{ok:true,game:{...rest,status:"PLAYING"}}}
export function confirmEndGame(game:GameLifecycle,userId:string):GameMutationResult{const team=captainTeam(game,userId);if(!team)return{ok:false,error:"NOT_CAPTAIN"};if(game.status!=="END_REQUESTED")return{ok:false,error:"INVALID_GAME_STATUS"};if(game.requestedByTeamId===team.teamId)return{ok:false,error:"CANNOT_CONFIRM_OWN_REQUEST"};return{ok:true,game:{...game,status:"AWAITING_SCORE",confirmedByUserId:userId}}}
export function rejectEndGameRequest(game:GameLifecycle,userId:string):GameMutationResult{const team=captainTeam(game,userId);if(!team)return{ok:false,error:"NOT_CAPTAIN"};if(game.status!=="END_REQUESTED")return{ok:false,error:"INVALID_GAME_STATUS"};if(game.requestedByTeamId===team.teamId)return{ok:false,error:"CANNOT_CONFIRM_OWN_REQUEST"};const{requestedByTeamId:_,requestedByUserId:__,endRequestedAt:___,confirmedByUserId:____,...rest}=game;void _;void __;void ___;void ____;return{ok:true,game:{...rest,status:"PLAYING"}}}
export function confirmEndByScoreSubmission(game:GameLifecycle,teamId:string,userId:string):GameMutationResult{if(game.status!=="END_REQUESTED")return{ok:false,error:"INVALID_GAME_STATUS"};if(game.requestedByTeamId===teamId)return{ok:true,game};return confirmEndGame(game,userId)}
export function calculateTeamTotal(submission:ScoreSubmission):number{return submission.playerScores.reduce((sum,item)=>sum+item.points,0)}
export function validatePlayerScores(game:GameLifecycle,teamId:string,scores:Record<string,number>):GameLifecycleError|null{const team=game.teamA.teamId===teamId?game.teamA:game.teamB.teamId===teamId?game.teamB:null;if(!team)return"TEAM_NOT_IN_GAME";if(team.members.some((member)=>!(member.id in scores)))return"INCOMPLETE_PLAYERS";if(Object.values(scores).some((score)=>!Number.isInteger(score)||score<0))return"INVALID_SCORE_VALUE";return null}
export function saveScoreDraft(game:GameLifecycle,existing:ScoreSubmission|undefined,teamId:string,userId:string,scores:Record<string,number>,nowIso:string):{submission?:ScoreSubmission;error?:GameLifecycleError}{const team=captainTeam(game,userId);if(!team||team.teamId!==teamId)return{error:"NOT_CAPTAIN"};if(game.status!=="END_REQUESTED"&&game.status!=="AWAITING_SCORE"&&game.status!=="INVALID_SCORE")return{error:"INVALID_GAME_STATUS"};if(existing?.status==="SUBMITTED"&&game.status!=="INVALID_SCORE")return{error:"SUBMISSION_LOCKED"};if(Object.values(scores).some((score)=>!Number.isInteger(score)||score<0))return{error:"INVALID_SCORE_VALUE"};return{submission:{id:existing?.id??`score-${crypto.randomUUID()}`,gameId:game.id,teamId,submittedByUserId:userId,status:"DRAFT",updatedAt:nowIso,playerScores:Object.entries(scores).map(([playerId,points])=>({gameId:game.id,teamId,playerId,points}))}}}
export function submitTeamScores(game:GameLifecycle,submission:ScoreSubmission,userId:string,nowIso:string):{submission?:ScoreSubmission;error?:GameLifecycleError}{const scores=Object.fromEntries(submission.playerScores.map((item)=>[item.playerId,item.points]));const error=validatePlayerScores(game,submission.teamId,scores);if(error)return{error};const team=captainTeam(game,userId);if(!team||team.teamId!==submission.teamId)return{error:"NOT_CAPTAIN"};return{submission:{...submission,status:"SUBMITTED",submittedAt:nowIso,updatedAt:nowIso}}}
export function validateGameScores(game:GameLifecycle,a:ScoreSubmission,b:ScoreSubmission):ScoreValidationError|null{const rosterA=new Set(game.teamA.members.map((m)=>m.id)),rosterB=new Set(game.teamB.members.map((m)=>m.id));if(a.playerScores.length!==rosterA.size||b.playerScores.length!==rosterB.size||a.playerScores.some((s)=>!rosterA.has(s.playerId))||b.playerScores.some((s)=>!rosterB.has(s.playerId)))return"INCOMPLETE_PLAYERS";if([...a.playerScores,...b.playerScores].some((s)=>!Number.isInteger(s.points)||s.points<0))return"INVALID_POINTS";const totalA=calculateTeamTotal(a),totalB=calculateTeamTotal(b);if(totalA===totalB)return"TIED_SCORE";const reachedA=totalA>=game.targetScore,reachedB=totalB>=game.targetScore;if(!reachedA&&!reachedB)return"NO_TEAM_REACHED_TARGET";if(reachedA&&reachedB)return"BOTH_TEAMS_REACHED_TARGET";return null}
export function determineWinner(game:GameLifecycle,a:ScoreSubmission,b:ScoreSubmission):string{ return calculateTeamTotal(a)>calculateTeamTotal(b)?game.teamA.teamId:game.teamB.teamId }
export function finalizeGameResult(game:GameLifecycle,a:ScoreSubmission,b:ScoreSubmission,nowIso:string):GameMutationResult{if(game.status==="COMPLETED")return{ok:false,error:"ALREADY_FINALIZED"};if(a.status!=="SUBMITTED"||b.status!=="SUBMITTED")return{ok:false,error:"WAITING_FOR_OTHER_TEAM"};const invalid=validateGameScores(game,a,b);if(invalid)return{ok:true,game:{...game,status:"INVALID_SCORE",invalidReason:invalid}};const winnerTeamId=determineWinner(game,a,b),loserTeamId=winnerTeamId===game.teamA.teamId?game.teamB.teamId:game.teamA.teamId;return{ok:true,game:{...game,status:"COMPLETED",winnerTeamId,loserTeamId,finalTeamAScore:calculateTeamTotal(a),finalTeamBScore:calculateTeamTotal(b),completedAt:nowIso,invalidReason:undefined}}}
export function updatePlayerStatistics(game:GameLifecycle,a:ScoreSubmission,b:ScoreSubmission):PlayerGameHistory[]{if(game.status!=="COMPLETED"||!game.completedAt||!game.winnerTeamId)return[];return[a,b].flatMap((submission)=>submission.playerScores.map((score)=>({gameId:game.id,playerId:score.playerId,teamId:submission.teamId,teamType:game.teamA.members.length===3?"THREE_X_THREE" as const:"FIVE_X_FIVE" as const,courtId:game.courtId,completedAt:game.completedAt!,points:score.points,won:submission.teamId===game.winnerTeamId})))}
export function incrementConsecutiveWins(game:GameLifecycle,winnerTeamId:string){const team=game.teamA.teamId===winnerTeamId?game.teamA:game.teamB;return team.consecutiveWinsBefore+1}
export function createLoserRequeueDecision(game:GameLifecycle,nowIso:string):PostGameDecision{const loser=game.loserTeamId===game.teamA.teamId?game.teamA:game.teamB;return{id:`decision-${crypto.randomUUID()}`,gameId:game.id,courtId:game.courtId,teamId:loser.teamId,captainUserId:loser.captainUserId,status:"DECIDING",requeueDecisionStartedAt:nowIso,requeueDecisionDeadline:new Date(Date.parse(nowIso)+LOSER_DECISION_SECONDS*1000).toISOString()}}
export function processCompletedGame(game:GameLifecycle,queue:QueueDataState,nowIso:string):{game:GameLifecycle;queue:QueueDataState;decision:PostGameDecision}{const winner=game.winnerTeamId!,loser=game.loserTeamId!;const legacyRestingChampion=queue.entries.find((entry)=>entry.courtId===game.courtId&&entry.status==="RESTING"&&entry.teamId!==game.teamA.teamId&&entry.teamId!==game.teamB.teamId)?.teamId;const restingChampionTeamId=game.restingChampionTeamId??legacyRestingChampion;const isReturningFlow=Boolean(restingChampionTeamId);const streak=isReturningFlow?1:incrementConsecutiveWins(game,winner);const waiting=queue.entries.filter((e)=>e.courtId===game.courtId&&e.status==="WAITING"&&e.teamId!==winner&&e.teamId!==loser).sort((a,b)=>a.position-b.position);const winnerStatus=streak>=2?"RESTING" as const:"DECIDING_CONTINUE" as const;const required=streak>=2?2:0;const nextTeamIds=isReturningFlow?[restingChampionTeamId!]:waiting.slice(0,required).map((e)=>e.teamId);let entries=queue.entries.map((e)=>e.teamId===winner?{...e,status:winnerStatus,position:0}:e.teamId===loser?{...e,status:"DECIDING_REQUEUE" as const,position:0}:isReturningFlow&&e.teamId===restingChampionTeamId?{...e,status:"RETURNING_CHAMPION" as const,position:0}:e);entries=reorderQueuePositions(deduplicateActiveQueueEntries(entries),game.courtId);const decision=createLoserRequeueDecision(game,nowIso);return{game:{...game,isRestGame:isReturningFlow,restingChampionTeamId,postGame:{winnerStatus,winnerConsecutiveWins:streak,winnerContinuationDecision:streak>=2?"CONTINUE":"PENDING",loserStatus:"DECIDING_REQUEUE",nextTeamIds,...(streak>=2?{restStartedAfterGameId:game.id}:{}),...(isReturningFlow?{returningChampionTeamId:restingChampionTeamId}:{} )}},queue:{...queue,entries},decision}}

export function chooseWinnerContinuation(game:GameLifecycle,queue:QueueDataState,userId:string,continuePlaying:boolean,nowIso:string):{game?:GameLifecycle;queue?:QueueDataState;error?:GameLifecycleError}{if(game.status!=="COMPLETED"||!game.postGame||!game.winnerTeamId)return{error:"INVALID_GAME_STATUS"};const winner=game.winnerTeamId===game.teamA.teamId?game.teamA:game.teamB;if(winner.captainUserId!==userId)return{error:"NOT_CAPTAIN"};if(game.postGame.winnerConsecutiveWins>=2||game.postGame.winnerContinuationDecision==="CONTINUE"||game.postGame.winnerContinuationDecision==="LEAVE")return{error:"INVALID_GAME_STATUS"};const winnerStatus=continuePlaying?"HOLDING_COURT" as const:"LEFT_QUEUE" as const;const existing=queue.entries.find((entry)=>entry.teamId===winner.teamId);let entries=queue.entries.map((entry)=>entry.teamId===winner.teamId?{...entry,status:winnerStatus,position:0}:!continuePlaying&&game.postGame?.returningChampionTeamId===entry.teamId?{...entry,status:"HOLDING_COURT" as const,position:0}:entry);if(continuePlaying&&!existing)entries=[...entries,{id:`winner-hold-${game.id}`,courtId:game.courtId,teamId:winner.teamId,status:"HOLDING_COURT",position:0,joinedAt:nowIso}];return{game:{...game,postGame:{...game.postGame,winnerStatus,winnerContinuationDecision:continuePlaying?"CONTINUE":"LEAVE"}},queue:{...queue,entries:reorderQueuePositions(entries,game.courtId)}}}

export function synchronizeHoldingWinnerEntry(games:GameLifecycle[],queue:QueueDataState,nowIso:string):QueueDataState{const latestCompletedByCourt=new Map<GameLifecycle["courtId"],GameLifecycle>();for(const game of games.filter((item)=>item.status==="COMPLETED").sort((a,b)=>Date.parse(b.completedAt??"")-Date.parse(a.completedAt??"")))if(!latestCompletedByCourt.has(game.courtId))latestCompletedByCourt.set(game.courtId,game);let entries=deduplicateActiveQueueEntries(queue.entries);let changed=entries.length!==queue.entries.length;for(const game of latestCompletedByCourt.values()){if(queue.lastResetAt&&Date.parse(game.completedAt??"")<=Date.parse(queue.lastResetAt))continue;if(games.some((item)=>item.courtId===game.courtId&&isGameActive(item)))continue;const legacyResting=entries.find((entry)=>entry.courtId===game.courtId&&entry.status==="RESTING"&&entry.teamId!==game.teamA.teamId&&entry.teamId!==game.teamB.teamId);if(legacyResting){entries=entries.map((entry)=>entry.id===legacyResting.id?{...entry,status:"RETURNING_CHAMPION" as const,position:0}:entry);changed=true}if(game.postGame?.winnerContinuationDecision!=="CONTINUE"||!game.winnerTeamId||game.postGame.winnerConsecutiveWins>=2)continue;const existing=entries.find((entry)=>entry.teamId===game.winnerTeamId);if(existing?.status==="HOLDING_COURT")continue;if(existing)entries=entries.map((entry)=>entry.id===existing.id?{...entry,courtId:game.courtId,status:"HOLDING_COURT" as const,position:0}:entry);else entries=[...entries,{id:`winner-hold-${game.id}`,courtId:game.courtId,teamId:game.winnerTeamId,status:"HOLDING_COURT",position:0,joinedAt:nowIso}];changed=true}entries=deduplicateActiveQueueEntries(entries);return changed?{...queue,entries}:queue}

export function processSubmittedGame(
  game: GameLifecycle,
  teamASubmission: ScoreSubmission,
  teamBSubmission: ScoreSubmission,
  queue: QueueDataState,
  history: PlayerGameHistory[],
  decisions: PostGameDecision[],
  nowIso: string,
):
  | { ok: false; error: GameLifecycleError }
  | { ok: true; game: GameLifecycle; queue: QueueDataState; history: PlayerGameHistory[]; decisions: PostGameDecision[] } {
  if (game.status === "COMPLETED" || history.some((item) => item.gameId === game.id)) {
    return { ok: false, error: "ALREADY_FINALIZED" };
  }

  const finalized = finalizeGameResult(
    { ...game, status: "VALIDATING_RESULT" },
    teamASubmission,
    teamBSubmission,
    nowIso,
  );
  if (!finalized.ok) return { ok: false, error: finalized.error };
  if (finalized.game.status === "INVALID_SCORE") {
    return { ok: true, game: finalized.game, queue, history, decisions };
  }

  const postGame = processCompletedGame(finalized.game, queue, nowIso);
  return {
    ok: true,
    game: postGame.game,
    queue: postGame.queue,
    history: [...history, ...updatePlayerStatistics(postGame.game, teamASubmission, teamBSubmission)],
    decisions: [...decisions.filter((item) => item.gameId !== game.id), postGame.decision],
  };
}
export function chooseRequeue(decision:PostGameDecision,queue:QueueDataState,userId:string,nowIso:string){if(decision.captainUserId!==userId)return{error:"NOT_CAPTAIN" as GameLifecycleError};if(decision.status!=="DECIDING")return{error:"INVALID_GAME_STATUS" as GameLifecycleError};if(Date.parse(nowIso)>=Date.parse(decision.requeueDecisionDeadline))return{error:"DECISION_EXPIRED" as GameLifecycleError};const entry=queue.entries.find((e)=>e.teamId===decision.teamId);const max=queue.entries.filter((e)=>e.courtId===decision.courtId&&e.status==="WAITING").length;const entries=entry?queue.entries.map((e)=>e.id===entry.id?{...e,status:"WAITING" as const,position:max+1,joinedAt:nowIso}:e):queue.entries;return{decision:{...decision,status:"DECIDED" as const,decision:"REQUEUE" as const,decidedAt:nowIso},queue:{...queue,entries:reorderQueuePositions(entries,decision.courtId)}}}
export function chooseLeaveQueue(decision:PostGameDecision,queue:QueueDataState,userId:string,nowIso:string,value:"LEAVE"|"TIMEOUT"="LEAVE"){if(value==="LEAVE"&&decision.captainUserId!==userId)return{error:"NOT_CAPTAIN" as GameLifecycleError};const entries=queue.entries.map((e)=>e.teamId===decision.teamId?{...e,status:"LEFT_QUEUE" as const,position:0}:e);return{decision:{...decision,status:"DECIDED" as const,decision:value,decidedAt:nowIso},queue:{...queue,entries:reorderQueuePositions(entries,decision.courtId)}}}
export function expireRequeueDecisionIfNeeded(decision:PostGameDecision,queue:QueueDataState,nowIso:string):{decision:PostGameDecision;queue:QueueDataState}{if(decision.status!=="DECIDING"||Date.parse(nowIso)<Date.parse(decision.requeueDecisionDeadline))return{decision,queue};const entries=queue.entries.map((e)=>e.teamId===decision.teamId?{...e,status:"LEFT_QUEUE" as const,position:0}:e);return{decision:{...decision,status:"DECIDED",decision:"TIMEOUT",decidedAt:nowIso},queue:{...queue,entries:reorderQueuePositions(entries,decision.courtId)}}}
export const holdWinnerOnCourt=(game:GameLifecycle)=>({...game,postGame:game.postGame?{...game.postGame,winnerStatus:"HOLDING_COURT" as const}:game.postGame});
export const restTwoWinChampion=(game:GameLifecycle)=>({...game,postGame:game.postGame?{...game.postGame,winnerStatus:"RESTING" as const}:game.postGame});
export const prepareRestGame=(game:GameLifecycle)=>game.postGame?.nextTeamIds??[];
export const returnRestedChampion=(game:GameLifecycle,championTeamId:string)=>({...game,postGame:game.postGame?{...game.postGame,returningChampionTeamId:championTeamId,winnerStatus:"RETURNING_CHAMPION" as const}:game.postGame});
export const prepareNextGameAfterResult=(game:GameLifecycle)=>game.postGame?.nextTeamIds??[];
export const getRequiredTeamsForNextGame=(game:GameLifecycle)=>game.postGame?.winnerStatus==="RESTING"?2:1;
